--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --primary-color: rgba(43, 161, 132, 1);
+    --secondary-color: rgba(160, 82, 233, 1);
+    --reddish-color: rgba(250, 90, 90, 1);
+    --title-color: rgb(225, 226, 225);
+    --small-text-color: rgb(156, 155, 161);
+    --small-bg-color: rgba(55, 79, 107, 0.315);
+  }
+
